Security checks (#47)
* accepting password as secret and multi aarch support

* removed usage of runtime#exec